Terraform/NGINX/AWS/k8s_ubuntu/manifests/juice-shop/service-juice-shop.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: juice-shop
spec:
  selector:
    app: juice-shop
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
