Terraform/NGINX/AWS/k8s_ubuntu/manifests/juice-shop/ingress-juice-shop.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop
  namespace: juice-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juice-shop
                port:
                  number: 80
